update ECRAN page for register search and listPartners

--- a/www/index.html
+++ b/www/index.html
@@ -18,13 +18,16 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+
     <!-- your app's js -->
     <script src="resource/js/app.js"></script>
-    <script src="app/menu/MenuController.js"></script>
     <script src="app/home/HomeController.js"></script>
+    <script src="app/menu/MenuController.js"></script>
+    <script src="app/register/RegisterController.js"></script>
+    <script src="app/search/SearchController.js"></script>
+    <script src="app/list/ListController.js"></script>
   </head>
   <body ng-app="neemaa">
-
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
