--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -4,7 +4,7 @@
       <ion-nav-back-button>
       </ion-nav-back-button>
 
-      <ion-nav-buttons side="left">
+      <ion-nav-buttons side="right">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
       </ion-nav-buttons>
@@ -14,15 +14,25 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
+      <h1 class="title">Menu</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
-
-        <ion-item menu-close href="#/app/home">
+        <ion-item menu-close ui-sref="app.home">
           Home
         </ion-item>
-
+        <ion-item menu-close ui-sref="app.register">
+          Register
+        </ion-item>
+        <ion-item menu-close ui-sref="app.search">
+          Search
+        </ion-item>
+        <ion-item menu-close ui-sref="app.listSearch">
+          list
+        </ion-item>
+        <ion-item menu-close ui-sref="app.contact">
+          Contact
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
