controle des champs du formulaire inscription

--- a/www/app/list/list.html
+++ b/www/app/list/list.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Résultat">
+<ion-view view-title="NEEMAA">
     <ion-content class="content-list">
         <p>NeemStyeres disponible selon ta sélection :</p>
         <p>92110 / Tisasge / 23.03.16 10h30</p>
