--- a/www/app/search/search.html
+++ b/www/app/search/search.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Rechercher">
+<ion-view view-title="NEEMAA">
     <ion-content class="content-search">
         <h1>RENDEZ-VOUS A L'INSTANT</h1>
         <h2>Avec les meilleurs stylistes de la beauté afro.</h2>
