--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,8 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <!-- ionic-toast -->
+    <script src="lib/ionic-toast/dist/ionic-toast.bundle.min.js"></script>
 
     <!-- your app's js -->
     <script src="resource/js/app.js"></script>
