--- a/www/app/register/register.html
+++ b/www/app/register/register.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Neemaa">
+<ion-view view-title="NEEMAA">
   <ion-content class="content-register">
     <h1>Crée ton Compte :</h1>
     <form>
