--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,9 @@
     <script src="app/register/RegisterController.js"></script>
     <script src="app/search/SearchController.js"></script>
     <script src="app/list/ListController.js"></script>
+    <script src="app/startup/StartupController.js"></script>
+    
+    
   </head>
   <body ng-app="neemaa">
     <ion-nav-view></ion-nav-view>
