--- a/www/app/home/home.html
+++ b/www/app/home/home.html
@@ -1,5 +1,5 @@
-<ion-view view-title="NEEMAA">
-    <ion-content>
-        <h1>HOME</h1>
-    </ion-content>
+<ion-view >
+  <ion-content>
+    <h3 align="center">Home</h3>
+  </ion-content>
 </ion-view>
