--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -1,39 +1,39 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
-
+    <ion-nav-bar class="menu-bar">
       <ion-nav-buttons side="right">
-        <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+        <button class="button button-icon button-clear ion-android-menu ion-navicon btn-menu" menu-toggle="right">
         </button>
       </ion-nav-buttons>
     </ion-nav-bar>
-    <ion-nav-view name="menuContent"></ion-nav-view>
+
+    <ion-nav-view name="menuContent"> </ion-nav-view>
   </ion-side-menu-content>
 
-  <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
+  <ion-side-menu side="right">
+    <ion-header-bar class="  menu-bar">
       <h1 class="title">Menu</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close ui-sref="app.home">
-          Home
+        <ion-item menu-close >
+          Comment ca marche ?
         </ion-item>
-        <ion-item menu-close ui-sref="app.register">
-          Register
+        <ion-item menu-close  >
+          Prendre Rendez-Vous
         </ion-item>
-        <ion-item menu-close ui-sref="app.search">
-          Search
+        <ion-item menu-close  >
+          Mes Rendez-Vous
         </ion-item>
-        <ion-item menu-close ui-sref="app.listSearch">
-          list
+        <ion-item menu-close >
+          Mon Profil
         </ion-item>
-        <ion-item menu-close ui-sref="app.contact">
-          Contact
+        <ion-item menu-close >
+          Nous Contacter
         </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
+
+
 </ion-side-menus>
