--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,9 @@
     <!-- ionic-toast -->
     <script src="lib/ionic-toast/dist/ionic-toast.bundle.min.js"></script>
 
+    <!-- localStorage -->
+    <script src="lib/angular-local-storage/dist/angular-local-storage.min.js"></script>
+
     <!-- your app's js -->
     <script src="resource/js/app.js"></script>
     <script src="app/home/HomeController.js"></script>
@@ -29,8 +32,8 @@
     <script src="app/search/SearchController.js"></script>
     <script src="app/list/ListController.js"></script>
     <script src="app/startup/StartupController.js"></script>
-    
-    
+
+
   </head>
   <body ng-app="neemaa">
     <ion-nav-view></ion-nav-view>
