--- a/www/app/list/list.html
+++ b/www/app/list/list.html
@@ -3,28 +3,12 @@
         <p>NeemStyeres disponible selon ta sélection :</p>
         <p>92110 / Tisasge / 23.03.16 10h30</p>
         <ion-list>
-            <ion-item ui-sref="app.home">
+            <ion-item ui-sref="app.partnerNfo" class="list">
                 <div class="row row-center">
-                    <div class="col white-color">Alexander M<br>Service : Tissage, Soins, Nattes ...<br>
-                        <i class="icon ion-star"></i><i class="icon ion-star"></i><i class="icon ion-star"></i><i class="icon ion-star"></i><i class="icon ion-star"></i> 25 avis
+                    <div class="col list-left"><span class="list-title">Alexandre M.</span><br><span class="list-service">Service(s) : Tissage, Soins, Nattes ... </span><br>
+                        <i class="icon ion-star star-color"></i><i class="icon ion-star"></i><i class="icon ion-star"></i><i class="icon ion-star"></i><i class="icon ion-star"></i> 25 avis
                     </div>
-                    <div class="col white-color">0.4km <i class="icon ion-chevron-right"></i></div>
-                </div>
-            </ion-item>
-            <ion-item ui-sref="app.home">
-                <div class="row row-center">
-                    <div class="col">Alexander M<br>Service : Tissage, Soins, Nattes ...<br>
-                        <i class="icon ion-star"></i><i class="icon ion-star"></i><i class="icon ion-star"></i><i class="icon ion-star"></i><i class="icon ion-star"></i> 25 avis
-                    </div>
-                    <div class="col">0.4km <i class="icon ion-chevron-right"></i></div>
-                </div>
-            </ion-item>
-            <ion-item ui-sref="app.home">
-                <div class="row row-center">
-                    <div class="col">Alexander M<br>Service : Tissage, Soins, Nattes ...<br>
-                        <i class="icon ion-star"></i><i class="icon ion-star"></i><i class="icon ion-star"></i><i class="icon ion-star"></i><i class="icon ion-star"></i> 25 avis
-                    </div>
-                    <div class="col">0.4km <i class="icon ion-chevron-right"></i></div>
+                    <div class="col list-right">0.4km <i class="icon ion-chevron-right"></i></div>
                 </div>
             </ion-item>
         </ion-list>
