--- a/www/app/register/register.html
+++ b/www/app/register/register.html
@@ -6,6 +6,8 @@
       <input type="password" class="text-form" data-ng-model="register.password" placeholder="Mot de passe" />
       <input type="password" class="text-form" data-ng-model="register.password_confirm" placeholder="Confirmation mot de passe" />
       <p>Déja inscrit ? <a ui-sref="app.login">Clique ici</a></p>
+      <input type="checkbox" data-ng-model="register.type" value="true">
+      <p>Je suis prestataires de services. Je veux m'inscrire en tant que NeemStyler</p>
     </form>
   </ion-content>
   <div class="bar bar-footer bar-balanced">
