--- a/www/index.html
+++ b/www/index.html
@@ -29,8 +29,19 @@
     <script src="app/home/HomeController.js"></script>
     <script src="app/menu/MenuController.js"></script>
     <script src="app/register/RegisterController.js"></script>
+    <script src="app/register/RegisterService.js"></script>
+    <script src="app/login/LoginController.js"></script>
+    <script src="app/login/LoginService.js"></script>
     <script src="app/search/SearchController.js"></script>
+    <script src="app/search/SearchService.js"></script>
     <script src="app/list/ListController.js"></script>
+    <script src="app/list/ListService.js"></script>
+    <script src="app/user_profil/UserProfilController.js"></script>
+    <script src="app/user_profil/UserProfilService.js"></script>
+    <script src="app/partner_nfo/PartnerNfoController.js"></script>
+    <script src="app/partner_nfo/PartnerNfoService.js"></script>
+    <script src="app/partner_profil/PartnerProfilController.js"></script>
+    <script src="app/partner_profil/PartnerProfilService.js"></script>
     <script src="app/startup/StartupController.js"></script>
 
 
