--- a/www/app/list/list.html
+++ b/www/app/list/list.html
@@ -5,7 +5,7 @@
         <ion-list>
             <ion-item ui-sref="app.partnerNfo" class="list">
                 <div class="row row-center">
-                    <div class="col list-left"><span class="list-title">Alexandre M.</span><br><span class="list-service">Service(s) : Tissage, Soins, Nattes ... </span><br>
+                    <div class="col list-left"><span class="list-title">Alexandre M.</span><br><span class="list-service">Service(s) : Tissage</span><br>
                         <i class="icon ion-star star-color"></i><i class="icon ion-star"></i><i class="icon ion-star"></i><i class="icon ion-star"></i><i class="icon ion-star"></i> 25 avis
                     </div>
                     <div class="col list-right">0.4km <i class="icon ion-chevron-right"></i></div>
@@ -13,9 +13,4 @@
             </ion-item>
         </ion-list>
     </ion-content>
-    <div class="bar bar-footer bar-balanced">
-        <div class="title">
-            <button class="button button-large button-positive neemaa-button-footer" data-ng-click="search(search)">RESERVER</button>
-        </div>
-    </div>
 </ion-view>
