--- a/www/app/partner_profil/partner_profil.html
+++ b/www/app/partner_profil/partner_profil.html
@@ -1,6 +1,15 @@
 <ion-view view-title="NEEMAA">
   <ion-content class="content-partner-profil">
     <div class="row">
+      <div class="col col-20">
+        <img src="https://pixabay.com/static/uploads/photo/2014/04/02/14/07/barber-shop-306199_960_720.png" class="profil_picture" />
+        <a ui-sref="#">Edit</a>
+      </div>
+      <div class="col col-80">
+
+      </div>
+    </div>
+    <div class="row">
       <div class="col">
         <img class="partner_picture" style="display: none" src="https://pixabay.com/static/uploads/photo/2014/04/02/14/07/barber-shop-306199_960_720.png" />
       </div>
