--- a/www/app/user_profil/user_profil.html
+++ b/www/app/user_profil/user_profil.html
@@ -21,24 +21,45 @@
       <div class="row">
         <div class="col">
           <select data-ng-model="user_profil.skinType" class="text-form-select">
-            <option>Valu1</option>
-            <option>Valu1</option>
-            <option>Valu1</option>
+            <option value="" selected disabled>Type de peau</option>
+            <option>Normale</option>
+            <option>Sèche</option>
+            <option>Mixte</option>
+            <option>Grasse</option>
+            <option>Grasse à tendance acnéique</option>
+            <option>Hyper pigmentée</option>
           </select>
           <select data-ng-model="user_profil.skinColor" class="text-form-select">
-            <option>Valu1</option>
-            <option>Valu1</option>
-            <option>Valu1</option>
+            <option selected disabled value="">Couleur de peau</option>
+            <option style="background-color: #fbd3d1;"></option>
+            <option style="background-color: #f2b8ad;"></option>
+            <option style="background-color: #edc192;"></option>
+            <option style="background-color: #d9ae7b;"></option>
+            <option style="background-color: #C0946F;"></option>
+            <option style="background-color: #9C6C44;"></option>
+            <option style="background-color: #7F553D;"></option>
+            <option style="background-color: #674230;"></option>
+            <option style="background-color: #4A2F24;"></option>
+            <option style="background-color: #3C1F0F;"></option>
+            <option style="background-color: #2E2520;"></option>
           </select>
           <select data-ng-model="user_profil.hairType" class="text-form-select">
-            <option>Valu1</option>
-            <option>Valu1</option>
-            <option>Valu1</option>
+            <option value="" selected disabled>Type de cheveux</option>
+            <option>Cheveux raide</option>
+            <option>Ondulés</option>
+            <option>Bouclés-Frisé</option>
+            <option>Crépus</option>
           </select>
           <select data-ng-model="user_profil.hairColor" class="text-form-select">
-            <option>Valu1</option>
-            <option>Valu1</option>
-            <option>Valu1</option>
+            <option value="" selected disabled>Couleur de cheveux</option>
+            <option>Noir</option>
+            <option>Châtain Foncé</option>
+            <option>Châtain</option>
+            <option>Châtain clair</option>
+            <option>Blond Foncé</option>
+            <option>Blond Clair</option>
+            <option>Blond très clair</option>
+            <option>Roux</option>
           </select>
           <input type="radio" data-ng-model="user_profil.type" /><span class="white-color">Je veux m'inscrire comme NeemStyler (prestataire de service)</span>
         </div>
