--- a/www/app/partner_nfo/partner_nfo.html
+++ b/www/app/partner_nfo/partner_nfo.html
@@ -2,7 +2,7 @@
   <ion-content class="content-partner-nfo">
     <div class="row">
       <div class="col">
-        <img class="partner_picture" src="https://pixabay.com/static/uploads/photo/2014/04/02/14/07/barber-shop-306199_960_720.png" /><br>
+        <img class="partner_picture" src={{partnerNfo.picture}} /><br>
         <i class="ion ion-star"></i>
         <i class="ion ion-star"></i>
         <i class="ion ion-star"></i>
@@ -11,11 +11,10 @@
       </div>
       <div class="col">
         <div class="partner_nfo">
-          <h2>Alexandre M.</h2>
+          <h2>{{partnerNfo.name}}</h2>
           <p>
             Adresse :<br>
-            xx rue xxxxxxxxxx
-            92110 Clichy la Garenne
+            {{partnerNfo.adress}}
           </p>
           <input type="checkbox"> A domicile
           <input type="checkbox"> En salon
@@ -24,19 +23,12 @@
     </div>
     <div class="row">
       <div class="col">
-        <img class="partner-detail-picture" src="http://www.colorinaworld.com/albums/formes-decoration-robes/carre.gif">
-        <img class="partner-detail-picture" src="http://www.colorinaworld.com/albums/formes-decoration-robes/carre.gif">
-        <img class="partner-detail-picture" src="http://www.colorinaworld.com/albums/formes-decoration-robes/carre.gif">
-        <img class="partner-detail-picture" src="http://www.colorinaworld.com/albums/formes-decoration-robes/carre.gif">
-        <img class="partner-detail-picture" src="http://www.colorinaworld.com/albums/formes-decoration-robes/carre.gif">
+        <img class="partner-detail-picture" data-ng-repeat="photo in partnerNfo.img track by $index" src={{photo}}/>
       </div>
     </div>
     <h2 class="partner_nfo_title">Services :</h2>
     <ul class="list-partner-nfo">
-      <li>Service1</li>
-      <li>Service1</li>
-      <li>Service1</li>
-      <li>Service1</li>
+      <li data-ng-repeat="service in partnerNfo.service">{{service}}</li>
     </ul>
     <h2 class="partner_nfo_title">Disponibilités :</h2>
     <div class="row">
