--- a/www/app/user_profil/user_profil.html
+++ b/www/app/user_profil/user_profil.html
@@ -8,58 +8,33 @@
           <input type="radio" data-ng-model="user_profil.gender" value="male"><span class="white-color"> Homme</span><br>
         </div>
         <div class="col">
-          <input type="text" data-ng-model="user_profil.last_name" class="profil-text-form" placeholder="Prénom" >
-          <input type="text" data-ng-model="user_profil.first_name" class="profil-text-form" placeholder="Nom" >
-          <input type="email" data-ng-model="user_profil.mail" class="profil-text-form" placeholder="Email" >
-          <input type="tel" data-ng-model="user_profil.tel" class="profil-text-form" placeholder="mobile" >
-          <input type="text" data-ng-model="user_profil.adresse" class="profil-text-form" placeholder="Adresse" >
-          <input type="text" data-ng-model="user_profil.cp" class="profil-text-form" placeholder="Code Postal" >
-          <input type="date" data-ng-model="user_profil.birthdate" class="profil-text-form" placeholder="date de naissance" >
+          <input type="text" data-ng-model="user.lastname" class="profil-text-form">
+          <input type="text" data-ng-model="user.firstname" class="profil-text-form">
+          <input type="email" data-ng-model="user.email" class="profil-text-form" placeholder="Email" >
+          <input type="tel" data-ng-model="user.tel" class="profil-text-form" placeholder="mobile" >
+          <input type="text" data-ng-model="user.adress" class="profil-text-form" placeholder="Adresse" >
+          <input type="text" data-ng-model="user.cp" class="profil-text-form" placeholder="Code Postal" >
+          <input type="date" data-ng-model="user.birthdate" class="profil-text-form" placeholder="date de naissance" >
           <a ui-sref="app.userProfil">Changer de mot de passe</a>
         </div>
       </div>
       <div class="row">
         <div class="col">
-          <select data-ng-model="user_profil.skinType" class="text-form-select">
-            <option value="" selected disabled>Type de peau</option>
-            <option>Normale</option>
-            <option>Sèche</option>
-            <option>Mixte</option>
-            <option>Grasse</option>
-            <option>Grasse à tendance acnéique</option>
-            <option>Hyper pigmentée</option>
+          <select data-ng-model="user.SkinType" class="text-form-select">
+            <option value="" disabled>Type de peau</option>
+            <option data-ng-repeat="skin in user.SkinType">{{skin}}</option>
           </select>
-          <select data-ng-model="user_profil.skinColor" class="text-form-select">
-            <option selected disabled value="">Couleur de peau</option>
-            <option style="background-color: #fbd3d1;"></option>
-            <option style="background-color: #f2b8ad;"></option>
-            <option style="background-color: #edc192;"></option>
-            <option style="background-color: #d9ae7b;"></option>
-            <option style="background-color: #C0946F;"></option>
-            <option style="background-color: #9C6C44;"></option>
-            <option style="background-color: #7F553D;"></option>
-            <option style="background-color: #674230;"></option>
-            <option style="background-color: #4A2F24;"></option>
-            <option style="background-color: #3C1F0F;"></option>
-            <option style="background-color: #2E2520;"></option>
+          <select data-ng-model="user.SkinColor" class="text-form-select">
+            <option value="" selected disabled>Couleur de peau</option>
+            <option data-ng-repeat="color in user.SkinColor" style="background-color: {{color}};"></option>
           </select>
-          <select data-ng-model="user_profil.hairType" class="text-form-select">
+          <select data-ng-model="user.HairType" class="text-form-select">
             <option value="" selected disabled>Type de cheveux</option>
-            <option>Cheveux raide</option>
-            <option>Ondulés</option>
-            <option>Bouclés-Frisé</option>
-            <option>Crépus</option>
+            <option data-ng-repeat="hairType in user.HairType">{{hairType}}</option>
           </select>
-          <select data-ng-model="user_profil.hairColor" class="text-form-select">
+          <select data-ng-model="user.HairColor" class="text-form-select">
             <option value="" selected disabled>Couleur de cheveux</option>
-            <option>Noir</option>
-            <option>Châtain Foncé</option>
-            <option>Châtain</option>
-            <option>Châtain clair</option>
-            <option>Blond Foncé</option>
-            <option>Blond Clair</option>
-            <option>Blond très clair</option>
-            <option>Roux</option>
+            <option data-ng-repeat="hairColor in user.HairColor">{{hairColor}}</option>
           </select>
           <input type="radio" data-ng-model="user_profil.type" /><span class="white-color">Je veux m'inscrire comme NeemStyler (prestataire de service)</span>
         </div>
@@ -68,7 +43,7 @@
   </ion-content>
   <div class="bar bar-footer bar-balanced">
     <div class="title">
-      <button class="button button-large button-positive neemaa-button-footer" data-ng-click="user_profil(user_profil)">Enregistrer</button>
+      <button class="button button-large button-positive neemaa-button-footer" data-ng-click="user_profil(user)">Enregistrer</button>
     </div>
   </div>
 </ion-view>
