--- a/www/app/register/register.html
+++ b/www/app/register/register.html
@@ -2,7 +2,7 @@
   <ion-content class="content-register">
     <h1>Crée ton Compte :</h1>
     <form>
-      <input type="email" class="text-form" data-ng-model="register.mail" placeholder="Email" />
+      <input type="email" class="text-form" data-ng-model="register.email" placeholder="Email" />
       <input type="password" class="text-form" data-ng-model="register.password" placeholder="Mot de passe" />
       <input type="password" class="text-form" data-ng-model="register.password_confirm" placeholder="Confirmation mot de passe" />
       <p>Déja inscrit ? <a ui-sref="app.login">Clique ici</a></p>
