--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -2,12 +2,12 @@
   <ion-side-menu-content>
     <ion-nav-bar class="menu-bar">
       <ion-nav-buttons side="right">
-        <button class="button button-icon button-clear ion-android-menu ion-navicon btn-menu" menu-toggle="right">
+        <button class="button button-icon button-clear ion-android-menu ion-navicon btn-menu" menu-toggle="right" data-ng-show="showMenuButton()">
         </button>
       </ion-nav-buttons>
     </ion-nav-bar>
 
-    <ion-nav-view name="menuContent"> </ion-nav-view>
+    <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
   <ion-side-menu side="right">
