--- a/www/app/login/login.html
+++ b/www/app/login/login.html
@@ -2,7 +2,7 @@
   <ion-content class="content-login">
     <h1>Se connecter</h1>
     <form>
-      <input type="email" class="text-form" data-ng-model="login.mail" placeholder="Email" />
+      <input type="email" class="text-form" data-ng-model="login.email" placeholder="Email" />
       <input type="password" class="text-form" data-ng-model="login.password" placeholder="Mot de passe" />
     </form>
     <p>
