--- a/www/app/partner_profil/partner_profil.html
+++ b/www/app/partner_profil/partner_profil.html
@@ -1,12 +1,42 @@
 <ion-view view-title="NEEMAA">
   <ion-content class="content-partner-profil">
     <div class="row">
-      <div class="col col-20">
+      <div class="margin-auto col col-20">
         <img src="https://pixabay.com/static/uploads/photo/2014/04/02/14/07/barber-shop-306199_960_720.png" class="profil_picture" />
         <a ui-sref="#">Edit</a>
       </div>
       <div class="col col-80">
-
+        <div class="row">
+          <div class="col col-50">
+            <input class="partner-profil-form-input"type="text" name="name" />
+          </div>
+          <div class="col col-50">
+            <input class="partner-profil-form-input"type="text" name="name"  />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col col-100">
+            <input class="partner-profil-form-input" type="text" name="name" >
+          </div>
+        </div>
+        <div class="row">
+          <div class="col col-25">
+            <input class="partner-profil-form-input" type="text" name="name" value="">
+          </div>
+          <div class="col col-75">
+            <input class="partner-profil-form-input" type="text" name="name" value="">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col col-100">
+            <input class="partner-profil-form-input" type="text" name="name" >
+          </div>
+        </div>
+        <div class="row">
+          <div class="col col-100">
+            <input class="partner-profil-form-input" type="text" name="name" >
+          </div>
+        </div>
       </div>
     </div>
     <div class="row">
@@ -19,10 +49,10 @@
     </div>
     <div class="row">
       <div class="col">
-        <input type="checkbox"> A Domicile
+        <ion-checkbox class="partner-profil-check"   >A Domicile</ion-checkbox>
       </div>
       <div class="col">
-        <input type="checkbox"> En salon
+        <ion-checkbox class="partner-profil-check" >En salon</ion-checkbox>
       </div>
     </div>
     <div class="row">
@@ -67,6 +97,9 @@
         <img class="partner-detail-picture" src="http://www.colorinaworld.com/albums/formes-decoration-robes/carre.gif">
       </div>
     </div>
+    <br>
+    <br>
+    <br>
   </ion-content>
   <div class="bar bar-footer bar-balanced partner_bar_footer">
     <div class="title">
