--- a/www/app/user_profil/user_profil.html
+++ b/www/app/user_profil/user_profil.html
@@ -4,35 +4,35 @@
       <div class="row">
         <div class="col">
           <img class="profil_picture" src="https://pixabay.com/static/uploads/photo/2014/04/02/14/07/barber-shop-306199_960_720.png" /><br>
-          <input type="radio" data-ng-model="user_profil.gender" value="female" checked><span class="white-color"> Femme</span><br>
+          <input type="radio" data-ng-model="user_profil.gender" value="female"><span class="white-color"> Femme</span><br>
           <input type="radio" data-ng-model="user_profil.gender" value="male"><span class="white-color"> Homme</span><br>
         </div>
         <div class="col">
-          <input type="text" data-ng-model="user.lastname" class="profil-text-form">
-          <input type="text" data-ng-model="user.firstname" class="profil-text-form">
-          <input type="email" data-ng-model="user.email" class="profil-text-form" placeholder="Email" >
-          <input type="tel" data-ng-model="user.tel" class="profil-text-form" placeholder="mobile" >
-          <input type="text" data-ng-model="user.adress" class="profil-text-form" placeholder="Adresse" >
-          <input type="text" data-ng-model="user.cp" class="profil-text-form" placeholder="Code Postal" >
-          <input type="date" data-ng-model="user.birthdate" class="profil-text-form" placeholder="date de naissance" >
+          <input type="text" data-ng-model="user_profil.lastname" class="profil-text-form" placeholder="Nom">
+          <input type="text" data-ng-model="user_profil.firstname" class="profil-text-form" placeholder="Prénom">
+          <input type="email" data-ng-model="user_profil.email" class="profil-text-form" placeholder="Email" >
+          <input type="tel" data-ng-model="user_profil.tel" class="profil-text-form" placeholder="mobile" >
+          <input type="text" data-ng-model="user_profil.adress" class="profil-text-form" placeholder="Adresse" >
+          <input type="text" data-ng-model="user_profil.cp" class="profil-text-form" placeholder="Code Postal" >
+          <input type="date" data-ng-model="user_profil.birthdate" class="profil-text-form" placeholder="date de naissance" >
           <a ui-sref="app.userProfil">Changer de mot de passe</a>
         </div>
       </div>
       <div class="row">
         <div class="col">
-          <select data-ng-model="user.SkinType" class="text-form-select">
+          <select data-ng-model="user_profil.SkinType" class="text-form-select">
             <option value="" disabled>Type de peau</option>
             <option data-ng-repeat="skin in user.SkinType">{{skin}}</option>
           </select>
-          <select data-ng-model="user.SkinColor" class="text-form-select">
+          <select data-ng-model="user_profil.SkinColor" class="text-form-select">
             <option value="" selected disabled>Couleur de peau</option>
             <option data-ng-repeat="color in user.SkinColor" style="background-color: {{color}};"></option>
           </select>
-          <select data-ng-model="user.HairType" class="text-form-select">
+          <select data-ng-model="user_profil.HairType" class="text-form-select">
             <option value="" selected disabled>Type de cheveux</option>
             <option data-ng-repeat="hairType in user.HairType">{{hairType}}</option>
           </select>
-          <select data-ng-model="user.HairColor" class="text-form-select">
+          <select data-ng-model="user_profil.HairColor" class="text-form-select">
             <option value="" selected disabled>Couleur de cheveux</option>
             <option data-ng-repeat="hairColor in user.HairColor">{{hairColor}}</option>
           </select>
@@ -43,7 +43,7 @@
   </ion-content>
   <div class="bar bar-footer bar-balanced">
     <div class="title">
-      <button class="button button-large button-positive neemaa-button-footer" data-ng-click="user_profil(user)">Enregistrer</button>
+      <button class="button button-large button-positive neemaa-button-footer" data-ng-click="save_profil(user_profil)">Enregistrer</button>
     </div>
   </div>
 </ion-view>
