--- a/www/app/user_profil/user_profil.html
+++ b/www/app/user_profil/user_profil.html
@@ -8,13 +8,13 @@
           <input type="radio" data-ng-model="user_profil.gender" value="male"><span class="white-color"> Homme</span><br>
         </div>
         <div class="col">
-          <input type="text" data-ng-model="user_profil.lastname" class="profil-text-form" placeholder="Nom">
-          <input type="text" data-ng-model="user_profil.firstname" class="profil-text-form" placeholder="Prénom">
+          <input type="text" data-ng-model="user_profil.last_name" class="profil-text-form" placeholder="Nom">
+          <input type="text" data-ng-model="user_profil.first_name" class="profil-text-form" placeholder="Prénom">
           <input type="email" data-ng-model="user_profil.email" class="profil-text-form" placeholder="Email" >
           <input type="tel" data-ng-model="user_profil.tel" class="profil-text-form" placeholder="mobile" >
           <input type="text" data-ng-model="user_profil.adress" class="profil-text-form" placeholder="Adresse" >
           <input type="text" data-ng-model="user_profil.cp" class="profil-text-form" placeholder="Code Postal" >
-          <input type="date" data-ng-model="user_profil.birthdate" class="profil-text-form" placeholder="date de naissance" >
+          <input type="text" data-ng-model="user_profil.birthdate" class="profil-text-form" placeholder="date de naissance" >
           <a ui-sref="app.userProfil">Changer de mot de passe</a>
         </div>
       </div>
@@ -22,19 +22,19 @@
         <div class="col">
           <select data-ng-model="user_profil.SkinType" class="text-form-select">
             <option value="" disabled>Type de peau</option>
-            <option data-ng-repeat="skin in user.SkinType">{{skin}}</option>
+            <option data-ng-repeat="skin in user_profile.SkinType">{{skin}}</option>
           </select>
           <select data-ng-model="user_profil.SkinColor" class="text-form-select">
             <option value="" selected disabled>Couleur de peau</option>
-            <option data-ng-repeat="color in user.SkinColor" style="background-color: {{color}};"></option>
+            <option data-ng-repeat="color in user_profile.SkinColor" style="background-color: {{color}};"></option>
           </select>
           <select data-ng-model="user_profil.HairType" class="text-form-select">
             <option value="" selected disabled>Type de cheveux</option>
-            <option data-ng-repeat="hairType in user.HairType">{{hairType}}</option>
+            <option data-ng-repeat="hairType in user_profile.HairType">{{hairType}}</option>
           </select>
           <select data-ng-model="user_profil.HairColor" class="text-form-select">
             <option value="" selected disabled>Couleur de cheveux</option>
-            <option data-ng-repeat="hairColor in user.HairColor">{{hairColor}}</option>
+            <option data-ng-repeat="hairColor in user_profile.HairColor">{{hairColor}}</option>
           </select>
           <input type="radio" data-ng-model="user_profil.type" /><span class="white-color">Je veux m'inscrire comme NeemStyler (prestataire de service)</span>
         </div>
