--- a/www/index.html
+++ b/www/index.html
@@ -42,6 +42,7 @@
     <script src="app/partner_profil/PartnerProfilController.js"></script>
     <script src="app/partner_profil/PartnerProfilService.js"></script>
     <script src="app/startup/StartupController.js"></script>
+    <script src="app/common/LoadingService.js"></script>
 
 
   </head>
