--- a/www/app/partner_profil/partner_profil.html
+++ b/www/app/partner_profil/partner_profil.html
@@ -8,33 +8,33 @@
       <div class="col col-80">
         <div class="row">
           <div class="col col-50">
-            <input class="partner-profil-form-input"type="text" name="name" />
+            <input class="partner-profil-form-input"type="text"   placeholder="Prénom" />
           </div>
           <div class="col col-50">
-            <input class="partner-profil-form-input"type="text" name="name"  />
+            <input class="partner-profil-form-input"type="text"   placeholder="Nom"/>
           </div>
         </div>
         <div class="row">
           <div class="col col-100">
-            <input class="partner-profil-form-input" type="text" name="name" >
+            <input class="partner-profil-form-input" type="text"  placeholder="Adresse">
           </div>
         </div>
         <div class="row">
           <div class="col col-25">
-            <input class="partner-profil-form-input" type="text" name="name" value="">
+            <input class="partner-profil-form-input" type="text"  placeholder="CP">
           </div>
           <div class="col col-75">
-            <input class="partner-profil-form-input" type="text" name="name" value="">
+            <input class="partner-profil-form-input" type="text" placeholder="Ville">
           </div>
         </div>
         <div class="row">
           <div class="col col-100">
-            <input class="partner-profil-form-input" type="text" name="name" >
+            <input class="partner-profil-form-input" type="text" placeholder="Téléphone"  >
           </div>
         </div>
         <div class="row">
           <div class="col col-100">
-            <input class="partner-profil-form-input" type="text" name="name" >
+            <input class="partner-profil-form-input" type="text" placeholder="Email">
           </div>
         </div>
       </div>
