--- a/www/app/register/register.html
+++ b/www/app/register/register.html
@@ -1,18 +1,19 @@
 <ion-view view-title="NEEMAA">
   <ion-content class="content-register">
-    <h1>Crée ton Compte :</h1>
+    <h1>Créez votre compte</h1>
     <form>
-      <input type="email" class="text-form" data-ng-model="register.email" placeholder="Email" />
-      <input type="password" class="text-form" data-ng-model="register.password" placeholder="Mot de passe" />
-      <input type="password" class="text-form" data-ng-model="register.password_confirm" placeholder="Confirmation mot de passe" />
-      <p>Déja inscrit ? <a ui-sref="app.login">Clique ici</a></p>
-      <input type="checkbox" data-ng-model="register.type" value="true">
-      <p>Je suis prestataires de services. Je veux m'inscrire en tant que NeemStyler</p>
+      <input type="text" class="text-form" data-ng-model="user.email" placeholder="Email" />
+      <input type="password" class="text-form" data-ng-model="user.password" placeholder="Mot de passe" />
+      <input type="password" class="text-form" data-ng-model="user.password_confirm" placeholder="Confirmation mot de passe" />
+      <p>Déja inscrit ? <a ui-sref="app.login">Cliquez ici</a></p>
+
+      <ion-checkbox class="register-check"ng-model="user.type" >Je suis prestataires de services. Je veux m'inscrire en tant que NeemStyler</ion-checkbox>
+
     </form>
-  </ion-content>
-  <div class="bar bar-footer bar-balanced">
-    <div class="title">
-      <button class="button button-large button-positive neemaa-button-footer" data-ng-click="register(register)">CONFIRMER</button>
+
+    <div class="custom-button">
+      <button class="button button-large button-positive neemaa-button-footer" data-ng-click="register(user)">CONFIRMER</button>
     </div>
-  </div>
+  </ion-content>
+
 </ion-view>
