last day sprint 1

--- a/www/app/list/list.html
+++ b/www/app/list/list.html
@@ -3,7 +3,7 @@
         <p>NeemStyeres disponible selon ta sélection :</p>
         <p>92110 / Tisasge / 23.03.16 10h30</p>
         <ion-list>
-            <ion-item ui-sref="app.partnerNfo" class="list" data-ng-repeat="p in listPartner">
+            <ion-item ui-sref="app.partnerNfo" class="my-list" data-ng-repeat="p in listPartner">
                 <div class="row row-center">
                     <div class="col list-left"><span class="list-title">{{p.name}}</span><br><span class="list-service">Service(s) : {{p.service}}</span><br>
                         <i class="icon ion-star star-color"></i><i class="icon ion-star"></i><i class="icon ion-star"></i><i class="icon ion-star"></i><i class="icon ion-star"></i> 25 avis
