--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -16,7 +16,7 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close >
+        <ion-item menu-close>
           Comment ca marche ?
         </ion-item>
         <ion-item menu-close  >
@@ -25,7 +25,7 @@
         <ion-item menu-close  >
           Mes Rendez-Vous
         </ion-item>
-        <ion-item menu-close >
+        <ion-item menu-close  ui-sref="app.userProfil" >
           Mon Profil
         </ion-item>
         <ion-item menu-close >
