--- a/www/app/partner_nfo/partner_nfo.html
+++ b/www/app/partner_nfo/partner_nfo.html
@@ -16,8 +16,9 @@
             Adresse :<br>
             {{partnerNfo.adress}}
           </p>
-          <input type="checkbox"> A domicile
-          <input type="checkbox"> En salon
+
+          <input class="" type="checkbox"> A domicile
+          <input class="" type="checkbox"> En salon
         </div>
       </div>
     </div>
@@ -76,5 +77,3 @@
     </div>
   </div>
 </ion-view>
-
-
