--- a/www/app/login/login.html
+++ b/www/app/login/login.html
@@ -3,8 +3,8 @@
     <div class="login-container">
     <h1>Se connecter</h1>
     <form>
-      <input type="email" class="text-form" ng-model="user.email" placeholder="Email" />
-      <input type="password" class="text-form" ng-model="user.password" placeholder="Mot de passe" />
+      <input type="text"  class="text-form" ng-model="user.email" placeholder="Email" />
+      <input type="password"   class="text-form" ng-model="user.password" placeholder="Mot de passe" />
     </form>
     <p class="login-para">
       <a ui-sref="app.register"> Je veux m'inscrire</a>
@@ -13,7 +13,7 @@
   </ion-content>
   <div class="bar bar-footer bar-balanced">
     <div class="title">
-      <button class="button button-large button-positive neemaa-button-footer" ng-click="login(user)">CONFIRMER</button>
+      <button ng-show="isFocused" class="button button-large button-positive neemaa-button-footer" ng-click="login(user)">CONFIRMER</button>
     </div>
   </div>
 </ion-view>
