--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -16,6 +16,9 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
+        <ion-item menu-close ui-sref="app.search">
+          Rechercher un service
+        </ion-item>
         <ion-item menu-close>
           Comment ca marche ?
         </ion-item>
