--- a/www/app/login/login.html
+++ b/www/app/login/login.html
@@ -13,7 +13,7 @@
   </ion-content>
   <div class="bar bar-footer bar-balanced">
     <div class="title">
-      <button ng-show="isFocused" class="button button-large button-positive neemaa-button-footer" ng-click="login(user)">CONFIRMER</button>
+      <button class="button button-large button-positive neemaa-button-footer" ng-click="login(user)">CONFIRMER</button>
     </div>
   </div>
 </ion-view>
