--- a/www/app/partner_profil/partner_profil.html
+++ b/www/app/partner_profil/partner_profil.html
@@ -8,33 +8,33 @@
       <div class="col col-80">
         <div class="row">
           <div class="col col-50">
-            <input class="partner-profil-form-input"type="text" placeholder="Prénom" />
+            <input class="partner-profil-form-input" type="text" data-ng-model="partnerNfo.firstname" placeholder="Prénom" />
           </div>
           <div class="col col-50">
-            <input class="partner-profil-form-input"type="text" placeholder="Nom"/>
+            <input class="partner-profil-form-input" type="text" data-ng-model="partnerNfo.lastname" placeholder="Nom"/>
           </div>
         </div>
         <div class="row">
           <div class="col col-100">
-            <input class="partner-profil-form-input" type="text" placeholder="Adresse">
+            <input class="partner-profil-form-input" type="text" data-ng-model="partnerNfo.adress" placeholder="Adresse">
           </div>
         </div>
         <div class="row">
           <div class="col col-25">
-            <input class="partner-profil-form-input" type="text" placeholder="CP">
+            <input class="partner-profil-form-input" type="text" data-ng-model="partnerNfo.cp" placeholder="CP">
           </div>
           <div class="col col-75">
-            <input class="partner-profil-form-input" type="text" placeholder="Ville">
+            <input class="partner-profil-form-input" type="text" data-ng-model="partnerNfo.city" placeholder="Ville">
           </div>
         </div>
         <div class="row">
           <div class="col col-100">
-            <input class="partner-profil-form-input" type="text" placeholder="Téléphone"  >
+            <input class="partner-profil-form-input" type="text" data-ng-model="partnerNfo.tel" placeholder="Téléphone"  >
           </div>
         </div>
         <div class="row">
           <div class="col col-100">
-            <input class="partner-profil-form-input" type="text" placeholder="Email">
+            <input class="partner-profil-form-input" type="text" data-ng-model="partnerNfo.email" placeholder="Email">
           </div>
         </div>
       </div>
