--- a/www/app/partner_nfo/partner_nfo.html
+++ b/www/app/partner_nfo/partner_nfo.html
@@ -31,10 +31,9 @@
     <ul class="list-partner-nfo">
       <li data-ng-repeat="service in partnerNfo.service">{{service}}</li>
     </ul>
-  </ion-content>
-  <div class="bar bar-footer bar-balanced">
-    <div class="title">
+
+    <div class="button_partner">
       <button class="button button-large button-positive neemaa-button-footer" data-ng-click="user_profil(user_profil)">Réserver</button>
     </div>
-  </div>
-</ion-view>
+  </ion-content>
+  </ion-view>
