--- a/www/app/register/register.html
+++ b/www/app/register/register.html
@@ -1,5 +1,5 @@
-<ion-view view-title="NEEMAA">
-  <ion-content class="content-register">
+<ion-view view-title="NEEMAA" class="content-register">
+  <ion-content scroll="false"  class="content-register">
     <h1>Créez votre compte</h1>
     <form>
       <input type="text" class="text-form" data-ng-model="user.email" placeholder="Email" />
