--- a/www/app/search/search.html
+++ b/www/app/search/search.html
@@ -1,5 +1,5 @@
-<ion-view view-title="NEEMAA">
-    <ion-content class="content-search">
+<ion-view view-title="NEEMAA" class="content-search">
+    <ion-content scroll="false" class="content-search">
         <h1>RENDEZ-VOUS A L'INSTANT</h1>
         <h2>Avec les meilleurs stylistes de la beauté afro.</h2>
         <form>
@@ -17,12 +17,8 @@
             </select>
             <p>* Champs Obligatoires</p>
         </form>
-    </ion-content>
-    <div class="bar bar-footer bar-balanced">
-        <div class="title">
+        <div class="search-button">
             <button class="button button-large button-positive neemaa-button-footer" data-ng-click="search(search)">RESERVER</button>
         </div>
-    </div>
+    </ion-content>
 </ion-view>
-
-
