--- a/www/app/login/login.html
+++ b/www/app/login/login.html
@@ -1,19 +1,18 @@
-<ion-view view-title="NEEMAA">
-  <ion-content class="content-login">
+<ion-view view-title="NEEMAA" class="content-login">
+  <ion-content scroll="false" class="content-login">
     <div class="login-container">
-    <h1>Se connecter</h1>
-    <form>
-      <input type="text"  class="text-form" ng-model="user.email" placeholder="Email" />
-      <input type="password"   class="text-form" ng-model="user.password" placeholder="Mot de passe" />
-    </form>
-    <p class="login-para">
-      <a ui-sref="app.register"> Je veux m'inscrire</a>
-    </p>
-  </div>
-  </ion-content>
-  <div class="bar bar-footer bar-balanced">
-    <div class="title">
-      <button class="button button-large button-positive neemaa-button-footer" ng-click="login(user)">CONFIRMER</button>
+      <h1>Se connecter</h1>
+      <form>
+        <input type="text"  class="text-form" ng-model="user.email" placeholder="Email" />
+        <input type="password"   class="text-form" ng-model="user.password" placeholder="Mot de passe" />
+      </form>
+      <p class="login-para">
+        <a ui-sref="app.register"> Je veux m'inscrire</a>
+      </p>
+      <div class="login-button">
+        <button  class="button button-large button-positive neemaa-button-footer" ng-click="login(user)">CONFIRMER</button>
+      </div>
     </div>
-  </div>
+  </ion-content>
+
 </ion-view>
