--- a/www/app/partner_nfo/partner_nfo.html
+++ b/www/app/partner_nfo/partner_nfo.html
@@ -16,10 +16,15 @@
             Adresse :<br>
             {{partnerNfo.adress}}
           </p>
-
-          <input class="" type="checkbox"> A domicile
-          <input class="" type="checkbox"> En salon
         </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <ion-checkbox class="partner-info-check">A domicile</ion-checkbox>
+      </div>
+      <div class="col">
+        <ion-checkbox class="partner-info-check">En salon</ion-checkbox>
       </div>
     </div>
     <div class="row">
