add icon to menu

--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -17,22 +17,22 @@
     <ion-content>
       <ion-list>
         <ion-item menu-close ui-sref="app.search">
-          Rechercher un service
+          <i class="ion-search"></i> Rechercher un service
         </ion-item>
         <ion-item menu-close>
-          Comment ca marche ?
+          <i class="ion-help-buoy"></i> Comment ca marche ?
         </ion-item>
         <ion-item menu-close  >
-          Prendre Rendez-Vous
+          <i class="ion-ios-plus"></i> Prendre Rendez-Vous
         </ion-item>
         <ion-item menu-close  >
-          Mes Rendez-Vous
+          <i class="ion-calendar"></i> Mes Rendez-Vous
         </ion-item>
         <ion-item menu-close  ui-sref="app.userProfil" >
-          Mon Profil
+          <i class="ion-person"></i> Mon Profil
         </ion-item>
         <ion-item menu-close >
-          Nous Contacter
+         <i class="ion-compose"></i> Nous Contacter
         </ion-item>
       </ion-list>
     </ion-content>
