--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
 
     <!-- ionic-toast -->
     <script src="lib/ionic-toast/dist/ionic-toast.bundle.min.js"></script>
-    
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
@@ -28,6 +28,7 @@
     <script src="resource/js/app.js"></script>
     <script src="app/home/HomeController.js"></script>
     <script src="app/menu/MenuController.js"></script>
+    <script src="app/menu/MenuService.js"></script>
     <script src="app/register/RegisterController.js"></script>
     <script src="app/register/RegisterService.js"></script>
     <script src="app/login/LoginController.js"></script>
